--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy Astro to GitHub Pages
 on:
 push:
 branches:
-- main # This workflow runs when you push to the 'main' branch
+- main
 
 jobs:
   build-and-deploy:
